--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,11 @@ dependencies:
   google_fonts: ^2.1.0
   animated_splash_screen: ^1.1.0
   font_awesome_flutter: ^9.1.0
+  flutter_bloc: ^7.0.1
+  card_swiper: ^1.0.2
+
+
+
 
 
 
